chore: fixed some layout issues and changed a few values to global vars

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,12 +1,6 @@
 /* CSS reset-lite */
 * { box-sizing: border-box; }
-html, body { height: 100%; }
-body {
-  margin: 0;
-  font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
-  color: #0f172a; /* slate-900 */
-  background: #f8fafc; /* slate-50 */
-}
+
 
 /* Layout helpers */
 .header-container {
@@ -23,7 +17,7 @@ body {
   z-index: 10;
   background: #ffffffcc;
   backdrop-filter: blur(8px);
-  border-bottom: 1px solid #e2e8f0;
+  border-bottom: 1px solid var(--border-color);
 }
 .site-header nav {
   display: flex;
@@ -63,8 +57,8 @@ main.container {
 
 /* Footer */
 .site-footer {
-  border-top: 1px solid #e2e8f0;
-  color: #475569; /* slate-600 */
+  border-top: 1px solid var(--border-color);
+  color: var(--footer-color);
   display: flex;
   align-items: left;
   text-align: center;
@@ -153,13 +147,13 @@ main.container {
 
 /* Typography */
 h1 {
-font-size: 3.125rem;
-color: var(--gray-900);
-font-weight: 500;
-line-height: 100%;
-letter-spacing: -0.125rem;
-margin: 0;
-font-family: "Inter Tight", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol";
+  font-size: 3.125rem;
+  color: var(--gray-900);
+  font-weight: 500;
+  line-height: 100%;
+  letter-spacing: -0.125rem;
+  margin: 0;
+  font-family: "Inter Tight", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+      Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+      "Segoe UI Symbol";
 }
