--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -8,7 +8,7 @@
 }
 
 h2 {
-  margin: 0 0 1rem;
+  margin: 0 1rem 1rem;
   font-weight: 600;
   text-align: left;
 }
